# Sentinel

./: .gitignore  Cargo.toml  README.md
src/: app.rs  cli.rs  llm.rs  main.rs  tui.rs
src/llm/: claude.rs  mod.rs  models.rs  ollama.rs
src/tools/: bash.rs  file.rs  find_file_tool.rs  ls.rs  mod.rs
src/tui/: app.rs  llm.rs  message.rs  mod.rs  ui.rs
