[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.24.0"
crossterm = "0.27.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4.31"
uuid = { version = "1.4.1", features = ["v4"] }
ollama-rs = { version = "0.3.1", features = ["stream", "macros", "tool-implementations"] }
schemars = "0.8.16"